--- a/ps_jasmine/tests.html
+++ b/ps_jasmine/tests.html
@@ -4,13 +4,21 @@
     <title>Jasmine Spec Runner</title>
 
     <!-- start with loading jasmine -->
-    <link rel="shortcut icon" type="image/png" href="bower_components/jasmine-core/lib/jasmine-core/jasmine_favicon.png">
+    <link rel="shortcut icon" type="image/png"
+          href="bower_components/jasmine-core/lib/jasmine-core/jasmine_favicon.png">
     <link rel="stylesheet" type="text/css" href="bower_components/jasmine-core/lib/jasmine-core/jasmine.css">
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+    <script type="text/javascript" src="bower_components/jasmine-reporters/src/junit_reporter.js"></script>
     <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/boot.js"></script>
+    <script type="text/javascript">
+        jasmine.getEnv().addReporter(new jasmineReporters.JUnitXmlReporter({
+            savePath: '../../..',
+            consolidateAll: true
+        }));
+    </script>
 
     <!--&lt;!&ndash; then require.js &ndash;&gt;-->
     <!--<script type="text/javascript" src="lib/require.js"></script>-->
@@ -23,8 +31,12 @@
 
 
 
+
 </head>
 
 <body>
+<div id="template-wrapper">
+    <div id="calc-fixture-template">Hello there</div>
+</div>
 </body>
 </html>
