--- a/ps_jasmine/tests.html
+++ b/ps_jasmine/tests.html
@@ -38,5 +38,8 @@
 <div id="template-wrapper">
     <div id="calc-fixture-template">Hello there</div>
 </div>
+<div id="container">
+
+</div>
 </body>
 </html>
