--- a/ps_require/SpecRunner.html
+++ b/ps_require/SpecRunner.html
@@ -19,6 +19,7 @@
         });
     </script>
     <script src="spec/tasksModule.spec.js"></script>
+    <script src="spec/logModule.spec.js"></script>
 </head>
 
 <body>
