--- a/ps_require/src/index.html
+++ b/ps_require/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Task List</title>
     <link rel="stylesheet" type="text/css" href="css/tasks.css">
-    <script src="js/require.js" data-main="js/main-optimized.min.js"></script>
+    <script src="js/require.js" data-main="js/main.js"></script>
     <script type="text/javascript" src="js/require-config.js"></script>
 </head>
 
@@ -20,14 +20,15 @@
     <div id="content">
         <ul id="task-list">
         </ul>
-
-        <ul id="log-list">
-        </ul>
     </div>
 
     <div class="toolbar">
         <button id="save-button">Save</button>
         <button id="cancel-button">Cancel</button>
+    </div>
+
+    <div>
+        <ul id="log-list"></ul>
     </div>
 
 </body>
