--- a/ps_jasmine/tests.html
+++ b/ps_jasmine/tests.html
@@ -12,11 +12,19 @@
     <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script type="text/javascript" src="bower_components/jasmine-reporters/src/junit_reporter.js"></script>
+    <script type="text/javascript" src="bower_components/jasmine-reporters/src/terminal_reporter.js"></script>
     <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/boot.js"></script>
     <script type="text/javascript">
         jasmine.getEnv().addReporter(new jasmineReporters.JUnitXmlReporter({
             savePath: '../../..',
             consolidateAll: true
+        }));
+    </script>
+    <script type="text/javascript">
+        jasmine.getEnv().addReporter(new jasmineReporters.TerminalReporter({
+            verbosity: 9,
+            color: true,
+            showstack: true
         }));
     </script>
 
